fix : eslint 버그 수정 및 webpack설정 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "allowJs": true,
     "jsx": "preserve",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "./build",
     "isolatedModules": true,
     "strict": true,
     "moduleResolution": "node",
