--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     ]
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.26",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
