--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "webpack --config webpack.prod.js",
     "start": "webpack --config webpack.dev.js",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --watchAll --coverage"
   },
   "keywords": [],
   "author": "",
@@ -23,12 +24,19 @@
     ]
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.1.2",
     "@types/styled-components": "^5.1.26",
     "eslint-config-react-app": "^7.0.1",
+    "jest": "^29.2.0",
+    "jest-environment-jsdom": "^29.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "ts-jest": "^29.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
